--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: "proxima-nova", sans-serif;
     background-color: white; /* light purple background */
 }
 
@@ -12,8 +12,13 @@ body {
     font-weight: bold;
     color: #026DDF; /* white color */
     margin-top: 10%;
+    margin-bottom: 0;
 }
-
+.subtitle{
+  text-align: center;
+  font-family: "proxima-nova", sans-serif;
+  font-size: 1.3rem;
+}
 .container {
     display: flex;
     justify-content: center;
@@ -22,17 +27,18 @@ body {
 }
 
 button {
-    padding: 15px 30px; /* increased padding for larger button size */
+    padding: 15px 30px;
     margin: 0;
     border: none;
     height: 22vh;
-    width: 17%;
-    background-color: #026DDF; /* white background */
-    color: white; /* black text */
-    font-size: 3rem; /* increased font size */
+    width: 20%;
+    background-color: #026DDF; 
+    color: white; 
+    font-size: 2.5rem; 
     cursor: pointer;
-    position: relative; /* needed for positioning pseudo-element */
-    font-family: 'Montserrat', bold; /* Montserrat font */
+    position: relative; 
+    font-family: "proxima-nova", sans-serif;
+    font-weight: bold;
 }
 
 button:first-child {
@@ -63,4 +69,225 @@ button:last-child::after {
 
 button:hover {
     background-color: #cccccc; /* light gray background on hover */
+}
+.Foot{
+  background-color: #026DDF;
+  height: 3.5rem;
+
+}
+.contact{
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  color: white;
+  justify-content: center;
+}
+
+* {
+  font-family: "proxima-nova", sans-serif;
+}
+
+section {
+  width: 100%;
+  display: inline-block;
+  background: #333;
+  height: 50vh;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+  text-decoration: underline;
+}
+.About{
+  text-align: center;
+  color: white;
+  text-decoration: underline;
+}
+.footer-distributed{
+	background: #026DDF;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+	padding-left: 55px ;
+  padding-right:  55px;
+  padding-top: 5px;
+  padding-bottom: 0 ;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 40%;
+}
+h3{
+  font-family: "proxima-nova", sans-serif;
+  margin-top: 2rem;
+}
+/* The company logo */
+.footer-company-about{
+  font-family: "proxima-nova", sans-serif;
+}
+.footer-distributed h3{
+	color:  #ffffff;
+	font: normal 36px "proxima-nova", sans-serif;;
+  margin-bottom: 0;
+}
+
+.footer-distributed p{
+	color:  white;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+  font-weight:400;
+	text-decoration: none;
+	color:  inherit;
+}
+
+.footer-distributed .footer-company-name{
+	color:  white;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+.footer-distributed .footer-center i{
+	background-color:  #026DDF;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+}
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+  font-weight:400;
+	vertical-align: middle;
+	margin:0;
+}
+
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+	color: white ;
+	text-decoration: none;;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "|";
+  font-weight:300;
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+/* Footer Right */
+
+.footer-distributed .footer-right{
+	width: 20%;
+}
+
+.footer-distributed .footer-company-about{
+	line-height: 20px;
+	color:  white;
+	font-size: 13px;
+	font-weight: normal;
+	margin: 0;
+}
+
+.footer-distributed .footer-company-about span{
+	display: block;
+	color:  #ffffff;
+	font-size: 14px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	background-color:  #33383b;
+	border-radius: 2px;
+
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+
+	margin-right: 3px;
+	margin-bottom: 5px;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (max-width: 880px) {
+
+	.footer-distributed{
+		font: bold 14px sans-serif;
+	}
+
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
+
+	.footer-distributed .footer-center i{
+		margin-left: 0;
+	}
+
 }
